Har lagt til diverse oppgaver

--- a/dokumenter.html
+++ b/dokumenter.html
@@ -47,6 +47,32 @@ li a:hover {
     background-color:red;
     color: white;
 }
+	
+	
+	
+.info
+	{
+		
+		position:fixed;
+		margin-top: 10px;
+		margin-left: 380px;
+		
+		
+	}
+	
+		
+.oppgaveliste
+		{
+		
+		position:fixed;
+		margin-top: 60px;
+		margin-left: 380px;
+		font-size: 20px;
+	    font-weight: bold; 
+		
+	}
+	
+	
 
 	
 </style>	
@@ -79,6 +105,21 @@ li a:hover {
  
 </ul>
 	
+	  <h1 class="info"> Oppgavene: </h1>
+	
+	
+
+	<dl  class="oppgaveliste">
+  <dt>Linkene</dt>
+  <dd><a href="Bootstrap_prosjekt/index.html">Gjestebok</a></dd>
+  <dd><a href="Tors/index.html">Tors_Flyreiser</a></dd>
+  <dd><a href="Quiz/index.html">Quiz</a></dd>
+  <dd><a href="requirements.docx">Donasjon AS krav (Download) </a></dd>
+  <dd><a href="design.docx">Donasjon AS design (Download) </a></dd> 
+  <dd><a href="Skiftefarge/gul.html">Endre bakgrunnsfarge</a></dd>
+</dl>
+	
+
 	
 </body>
 
