--- a/index.html
+++ b/index.html
@@ -59,16 +59,13 @@ li a:hover {
 		
 	}
 	
-	
-	
-	
-	
+
 	
 </style>	
 
 	
 	
-	<title>Reitans GithubSide </title>	
+	<title>Reitans Github-Side </title>	
 
 	
 </head>	
@@ -97,6 +94,7 @@ li a:hover {
     <h1 class="info"> Denne siden brukes for å levere <font color="green">IT</font> oppgaver</h1>
 	
 	
+
 	
 </body>
 
