--- a/Tors/index.html
+++ b/Tors/index.html
@@ -62,7 +62,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                    <img src="images/torslogo.jpg"  width="60px" height="60px" href="/index.html">
+                    <img src="Images/torslogo.jpg"  width="60px" height="60px" href="/index.html">
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
