--- a/Tors/tors.html
+++ b/Tors/tors.html
@@ -67,7 +67,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-               <img src="images/torslogo.jpg"  width="60px" height="60px" href="/index.html">
+               <img src="Images/torslogo.jpg"  width="60px" height="60px" href="/index.html">
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -123,7 +123,7 @@
     </div>
        </div>
 					<div class="reiseruteimg" >
-					<img src="images/reiserute.jpg" align="middle" margin-bottom="0px">   
+					<img src="Images/reiserute.jpg" align="middle" margin-bottom="0px">   
       </div>
         <!-- /.row -->
 
